manifests/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rmit-demo
  labels:
    app: rmit-demo
spec:
  selector:
    matchLabels:
      app: rmit-demo
  template:
    metadata:
      labels:
        app: rmit-demo
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "8080"
        prometheus.io/path: "/metrics"
        openservicemesh.io/inbound-port-exclusion-list: "8080"
    spec:
      containers:
        - name: rmit-app
          image: twinsnes/cf-rmit-app:4
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
          # livenessProbe:
          #   exec:
          #     command:
          #       - wget
          #       - --quiet
          #       - --tries=1
          #       - --timeout=4
          #       - --spider
          #       - http://localhost:8080
          #   timeoutSeconds: 5
          # readinessProbe:
          #   exec:
          #     command:
          #       - wget
          #       - --quiet
          #       - --tries=1
          #       - --timeout=4
          #       - --spider
          #       - http://localhost:8080
          #   timeoutSeconds: 5
          resources:
            limits:
              memory: "128Mi"
              cpu: "100m"
            requests:
              memory: "32Mi"
              cpu: "10m"
          securityContext:
            readOnlyRootFilesystem: true
            runAsUser: 10001
