manifests/base/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: rmit-demo-service
  annotations:
    alb.ingress.kubernetes.io/healthcheck-path: /
    alb.ingress.kubernetes.io/success-codes: '200'
  labels:
    app.kubernetes.io/name: rmit-demo-service
spec:
  type: NodePort
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: rmit-demo
