manifests/base/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rmit-app-ingress
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
spec:
  ingressClassName: alb
  defaultBackend:
    service:
      name: rmit-demo-service
      port: 
        number: 8080
